1) Фикс отлавливания ошибок